[package]
name = "hft_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
r2d2 = "0.8.10"
redis = { version = "0.29.1", features = ["r2d2"] }
rust_decimal = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
uuid = { version = "1.13.1", features = ["serde"] }
